Removed deprecated Java flags